# thread-spec

./: .gitignore  GOVERNANCE.md  LICENSE-CODE  LICENSE-SPEC  README.md
.github/workflows/: conformance.yml
conformance/: BUILDING.md  Cargo.toml
conformance/src/: lib.rs  main.rs  relay.rs
specs/: behavior-abi-v0.1.md  conformance-v0.1.md  locator-and-resolution-v0.1.md  presence-topology-v0.1.md  presence-wire-v0.1.md  thread-protocol-v0.1.md  world-manifest-v0.1.md
worlds/atlas/: world.json
worlds/codex-archive/: world.json
worlds/commons/: world.json
worlds/feed/: world.json
worlds/forge/: world.json
worlds/grove/: world.json
worlds/haze/: world.json
worlds/ledger/: world.json
worlds/market/: world.json
worlds/menagerie/: world.json
worlds/nexus/: world.json
worlds/table/: world.json
worlds/vault/: world.json
worlds/waystone/: world.json
