[package]
name = "thread-conformance"
version = "0.1.0"
edition = "2021"
authors = ["Pixygon <dev@pixygon.io>"]
license = "MIT OR Apache-2.0"
description = "The Thread conformance suite — a runnable, browser-independent check that a corpus of worlds honours the spec (validity, links, reachability)."

[[bin]]
name = "thread-conformance"
path = "src/main.rs"

[lib]
name = "thread_conformance"
path = "src/lib.rs"

# INTERIM: git dependency on the reference World Manifest implementation.
# Follow-up: publish it to crates.io as `thread-manifest` and depend on that,
# so this suite builds standalone for any external implementer. See GOVERNANCE.md.
[dependencies]
infinite-manifest = { git = "https://github.com/Pixygon/Infinite.git" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
