[package]
name = "thread-conformance"
version = "0.1.0"
edition = "2021"
authors = ["Pixygon <dev@pixygon.io>"]
license = "MIT OR Apache-2.0"
description = "The Thread conformance suite — a runnable, browser-independent check that a corpus of worlds honours the spec (validity, links, reachability)."

[[bin]]
name = "thread-conformance"
path = "src/main.rs"

[lib]
name = "thread_conformance"
path = "src/lib.rs"

# The reference World Manifest implementation, from crates.io. Imported under the
# local name `infinite-manifest` (so the suite source is unchanged) via a package
# alias to the published `thread-manifest`. Fully standalone — no git/path deps.
[dependencies]
infinite-manifest = { package = "thread-manifest", version = "0.1" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
